# gd32w51x-cmake-vscode

./: README.md
.devcontainer/: Containerfile  devcontainer.json
Drivers/BSP/GD32W515P_EVAL/: gd32w515p_eval.c  gd32w515p_eval.h
Drivers/GD32W51x_F5HC_standard_peripheral/Include/: gd32w51x_f5hc_adc.h  gd32w51x_f5hc_cau.h  gd32w51x_f5hc_crc.h  gd32w51x_f5hc_ctc.h  gd32w51x_f5hc_dbg.h  gd32w51x_f5hc_dci.h  gd32w51x_f5hc_dma.h  gd32w51x_f5hc_efuse.h  gd32w51x_f5hc_exti.h  gd32w51x_f5hc_fmc.h  gd32w51x_f5hc_fwdgt.h  gd32w51x_f5hc_gpio.h  gd32w51x_f5hc_hau.h  gd32w51x_f5hc_hpdf.h  gd32w51x_f5hc_i2c.h  gd32w51x_f5hc_icache.h  gd32w51x_f5hc_misc.h  gd32w51x_f5hc_pkcau.h  gd32w51x_f5hc_pmu.h  gd32w51x_f5hc_qspi.h  gd32w51x_f5hc_rcu.h  gd32w51x_f5hc_rtc.h  gd32w51x_f5hc_sdio.h  gd32w51x_f5hc_spi.h  gd32w51x_f5hc_sqpi.h  gd32w51x_f5hc_syscfg.h  gd32w51x_f5hc_timer.h  gd32w51x_f5hc_trng.h  gd32w51x_f5hc_tsi.h  gd32w51x_f5hc_tzpcu.h  gd32w51x_f5hc_usart.h  gd32w51x_f5hc_wwdgt.h
Drivers/GD32W51x_F5HC_standard_peripheral/Source/: gd32w51x_f5hc_adc.c  gd32w51x_f5hc_cau.c  gd32w51x_f5hc_cau_aes.c  gd32w51x_f5hc_cau_des.c  gd32w51x_f5hc_cau_tdes.c  gd32w51x_f5hc_crc.c  gd32w51x_f5hc_ctc.c  gd32w51x_f5hc_dbg.c  gd32w51x_f5hc_dci.c  gd32w51x_f5hc_dma.c  gd32w51x_f5hc_efuse.c  gd32w51x_f5hc_exti.c  gd32w51x_f5hc_fmc.c  gd32w51x_f5hc_fwdgt.c  gd32w51x_f5hc_gpio.c  gd32w51x_f5hc_hau.c  gd32w51x_f5hc_hau_sha_md5.c  gd32w51x_f5hc_hpdf.c  gd32w51x_f5hc_i2c.c  gd32w51x_f5hc_icache.c  gd32w51x_f5hc_misc.c  gd32w51x_f5hc_pkcau.c  gd32w51x_f5hc_pmu.c  gd32w51x_f5hc_qspi.c  gd32w51x_f5hc_rcu.c  gd32w51x_f5hc_rtc.c  gd32w51x_f5hc_sdio.c  gd32w51x_f5hc_spi.c  gd32w51x_f5hc_sqpi.c  gd32w51x_f5hc_syscfg.c  gd32w51x_f5hc_timer.c  gd32w51x_f5hc_trng.c  gd32w51x_f5hc_tsi.c  gd32w51x_f5hc_tzpcu.c  gd32w51x_f5hc_usart.c  gd32w51x_f5hc_wwdgt.c
Examples/ADC/Analog_watchdog/: .source_project
Examples/ADC/EXTI_trigger_routine_inserted_channel/: .source_project
Examples/ADC/Oversample_shift/: .source_project
Examples/ADC/Routine_channel_discontinuous_mode/: .source_project
Examples/ADC/Routine_channel_with_DMA/: .source_project
Examples/ADC/Software_trigger_routine_channel_polling/: .source_project
Examples/ADC/TIMER_trigger_injected_channel/: .source_project
Examples/ADC/Temperature_Vref_Vbat/: .source_project
Examples/CAU/CAU_AESECB_mode/: .source_project
Examples/CAU/CAU_AES_GCM_CCM_CFB_OFB_mode/: .source_project
Examples/CAU/CAU_AES_modes/: .source_project
Examples/CAU/CAU_DES_TDES_modes/: .source_project
Examples/CAU/CAU_TDESECB_mode/: .source_project
Examples/CRC/CRC_calculate/: .source_project
Examples/CTC/CTC_gpio/: .source_project
Examples/CTC/CTC_lxtal/: .source_project
Examples/DBG/DBG_timer0_stop/: .source_project
Examples/DCI/Dci_ov2640/: .source_project
Examples/DMA/multi_data_ram_to_ram/: .source_project
Examples/DMA/single_data_flash_to_ram/: .source_project
Examples/DMA/switch_buffer_mode/: .source_project
Examples/EFUSE/Efuse_user_data_write/: .source_project
Examples/EXTI/Key_external_interrupt_mode/: .source_project
Examples/FMC/Erase_program/: .source_project  CMakeLists.txt
Examples/FMC/Read_offset_region/: .source_project
Examples/FMC/Write_protection/: .source_project
Examples/FWDGT/FWDGT_key/: .source_project
Examples/GPIO/Keyboard_polling_mode/: .source_project  CMakeLists.txt
Examples/GPIO/Running_led/: .source_project
Examples/HAU/Hash_SHA1_MD5/: .source_project
Examples/HAU/Hash_SHA1_MD5_dma/: .source_project
Examples/HAU/Hash_SHA224_SHA256_dma/: .source_project
Examples/HAU/Hash_dma_context_switch/: .source_project
Examples/HAU/Hmac_SHA1_MD5/: .source_project
Examples/PKCAU/Rsa_crt_exponentiation/Drivers/GD32W51x_F5HC_standard_peripheral/: CMakeLists.txt
Projects/GD32W515P_EVAL/22_USBFS/USB_Host_MSC/Middlewares/FatFs/: CMakeLists.txt
Template/: .source_project  CMakeLists.txt
Template_TrustZone/NSecure/: .source_project
Template_TrustZone/Secure/: .source_project  CMakeLists.txt
(+740 files in other folders)
